@@ -1,0 +1,19 @@
+title: Check number of processes on OpenVMS
+agents: openvms
+author: Mathias Kettner <mk@mathias-kettner.de>
+license: GPL
+distribution: check_mk
+description:
+ This check measures the number of existing (not neccessarily
+ running) processes on OpenVMS. You can set levels on the number.
+
+perfdata:
+ One value: the number of processes.
+
+inventory:
+ One check per OpenVMS system will be created.
+
+[parameters]
+warn(int): warning level for the number of processes
+crit(int): critical level for the number of processes
+
