@@ -537,3 +537,8 @@ def perfometer_vms_system_ios(row, check_command, perf_data):
 perfometers["check_mk-vms_system.ios"] = perfometer_vms_system_ios
 
 
+def perfometer_check_mk_vms_system_procs(row, check_command, perf_data):
+    color = { 0: "#a4f", 1: "#ff2", 2: "#f22", 3: "#fa2" }[row["service_state"]]
+    return "%d" % int(perf_data[0][1]), perfometer_logarithmic(perf_data[0][1], 100, 2, color)
+
+perfometers["check_mk-vms_system.procs"] = perfometer_check_mk_vms_system_procs
