@@ -17,6 +17,7 @@
     * vms_cpu: new check for CPU utilization on OpenVMS
     * vms_if: new check for network interfaces on OpenVMS
     * vms_system.ios: new check for total direct/buffered IOs on OpenVMS
+    * vms_system.procs: new check for number of processes on OpenVMS
 
     WATO:
     * Added permission to control the "clone host" feature in WATO
